fixing columns spacing about page

--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -13,7 +13,7 @@
 
 .cols2 {
   float: left;
-  margin-left: 30px;
+
   width: 500px;
 }
 
